--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -1,21 +1,27 @@
+<div class="she-my-wrap container">
+    <ol class="position she-breadcrumb">
+        <li> <a href="index.php?route=common/home"> Home </a> </li>
+        <li> <span class="selected"> My ACCOUNT </span> </li>
+    </ol>
+    <div class="row">
 <div class=" she-side col-sm-3">
     <nav class="she-side-nav">
-        <h3 class="she-title j-side-title"> <a class="j-my-accout" href="" style="color: rgb(34, 34, 34);">My ACCOUNT </a> </h3>
+        <h3 class="she-title j-side-title"> <a class="j-my-accout" href="index.php?route=account/account" style="color: rgb(34, 34, 34);">My ACCOUNT </a> </h3>
         <ul>
-            <li> <a class=" area j-member-accout" href="">Account Setting </a> {#<img class="pic-left" src="../../image/sucess_ved748c3.png" alt="" />#} </li>
-            <li>My Orders </li>
+            <li> <a class=" area j-member-accout" href="index.php?route=account/edit">Account Setting </a> </li>
+            <li> <a class="j-member-orders" href="index.php?route=account/order">My Orders</a> </li>
             <li> <a class="ga-tk-list-my-tickets j-member-ticket " href=""> My Tickets <span id="ticket_menu_num" class="red_num"></span> </a> </li>
             <li> <a class=" j-member-payment" href=""> My Payment Options </a> </li>
-            <li> <a class=" j-member-wallet" href=""> My Wallet </a> </li>
+            <li> <a class=" j-member-wallet" href="index.php?route=account/transaction"> My Wallet </a> </li>
             <li> <a class=" j-member-mymeasurement" href=""> My Measurements </a> </li>
-            <li> <a class=" j-member-shein" href=""> SheIn Membership&nbsp; {#<img class="sheinclass_icn" src="../../image/shein_class.png" />#} </a> </li>
+            <li> <a class=" j-member-shein" href=""> SheIn Membership</a> </li>
             <li> <a class=" j-member-address" href=""> Address Book </a> </li>
-            <li> <a class=" j-member-password" href=""> Edit Password </a> </li>
+            <li> <a class=" j-member-password" href="index.php?route=account/password"> Edit Password </a> </li>
             <li> <a class=" j-member-styleGallery" href=""> Style Gallery </a> </li>
             <li> <a class=" j-member-report" href=""> Free Trial Report </a> </li>
-            <li> <a class=" j-member-wishlist" href=""> My Wishlist </a> </li>
+            <li> <a class=" j-member-wishlist" href="index.php?route=account/wishlist"> My Wishlist </a> </li>
             <li> <a class=" j-member-point" href=""> Bonus Point Program </a> </li>
-            <li class="log_off_left"> <a class="j-member-signout" href=""> Sign out </a> </li>
+            <li class="log_off_left"> <a class="j-member-signout" href="index.php?route=account/logout"> Sign out </a> </li>
         </ul>
     </nav>
 </div>
