--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -20,6 +20,9 @@
   <link media="all" href="catalog/view/theme/default/css/detail.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/cart.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/cart_empty.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/wishlist.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/transation.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/edit.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
