--- a/catalog/view/theme/default/template/account/order_list.twig
+++ b/catalog/view/theme/default/template/account/order_list.twig
@@ -1,10 +1,4 @@
 {{ header }}
-<div class="she-my-wrap container">
-  <ol class="position she-breadcrumb">
-    <li> <a href=""> Home </a> </li>
-    <li> <span class="selected"> My ACCOUNT </span> </li>
-  </ol>
-  <div class="row">
       {{ column_left }}
     <div class="she-center col-sm-9 myorder-detail order-wrap j-order-conter j-order-detail" id="orders_new_right">
       <h3 class="she-tl-h3">My Orders</h3>
@@ -29,7 +23,7 @@
             <div class="order_img_list swiper-container order-swiper-container1 swiper-container-horizontal">
               <div class="swiper-wrapper order-swiper-wrap">
                 <div class="order_img_small swiper-slide swiper-slide-active" style="width: 120px;">
-                  <img src="../../image/14938011409591745325_thumbnail_220x293.jpg" alt="" />
+                  <img src="/catalog/view/theme/default/image/14938011409591745325_thumbnail_220x293.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-button-prev swiper-button-prev1 iconfont swiper-button-disabled">
@@ -66,7 +60,7 @@
             <div class="order_img_list swiper-container order-swiper-container2 swiper-container-horizontal">
               <div class="swiper-wrapper order-swiper-wrap">
                 <div class="order_img_small swiper-slide swiper-slide-active" style="width: 120px;">
-                  <img src="../../image/15033896281634703513_thumbnail_220x293.jpg" alt="" />
+                  <img src="/catalog/view/theme/default/image/15033896281634703513_thumbnail_220x293.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-button-prev swiper-button-prev2 iconfont swiper-button-disabled">
@@ -103,10 +97,10 @@
             <div class="order_img_list swiper-container order-swiper-container3 swiper-container-horizontal">
               <div class="swiper-wrapper order-swiper-wrap">
                 <div class="order_img_small swiper-slide swiper-slide-active" style="width: 120px;">
-                  <img src="../../image/15045224496531736370_thumbnail_220x293.jpg" alt="" />
+                  <img src="/catalog/view/theme/default/image/15045224496531736370_thumbnail_220x293.jpg" alt="" />
                 </div>
                 <div class="order_img_small swiper-slide swiper-slide-next" style="width: 120px;">
-                  <img src="../../image/15107379627463171832_thumbnail_220x293.jpg" alt="" />
+                  <img src="/catalog/view/theme/default/image/15107379627463171832_thumbnail_220x293.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-button-prev swiper-button-prev3 iconfont swiper-button-disabled">
@@ -143,10 +137,10 @@
             <div class="order_img_list swiper-container order-swiper-container4 swiper-container-horizontal">
               <div class="swiper-wrapper order-swiper-wrap">
                 <div class="order_img_small swiper-slide swiper-slide-active" style="width: 120px;">
-                  <img src="../../image/14805717662107247113_thumbnail_220x293.jpg" alt="" />
+                  <img src="/catalog/view/theme/default/image/14805717662107247113_thumbnail_220x293.jpg" alt="" />
                 </div>
                 <div class="order_img_small swiper-slide swiper-slide-next" style="width: 120px;">
-                  <img src="../../image/15111692731405587203_thumbnail_220x293.jpg" alt="" />
+                  <img src="/catalog/view/theme/default/image/15111692731405587203_thumbnail_220x293.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-button-prev swiper-button-prev4 iconfont swiper-button-disabled">
