--- a/catalog/view/theme/default/template/common/success.twig
+++ b/catalog/view/theme/default/template/common/success.twig
@@ -1,21 +1,6 @@
 {{ header }}
-<div id="common-success" class="container">
-  {{ include(helper.template('_partial/breadcrumb')) }}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      {{ text_message }}
-      <div class="buttons">
-        <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
-      </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+<link rel="stylesheet" type="text/css" href="//sheinsz.ltwebstatic.com/she_dist/css/shein-8c4dc9970b.css">
+<div class="reg-show-top she-text-center" style="margin-bottom: 30px;margin-top:30px;"><p><img style="width: 70px;" src="//sheinsz.ltwebstatic.com/she_dist/images/succed-457c6ca866.png">
+        {{ text_success }}
+  </p> <a href="{{ login }}" class="she-btn-black she-btn-l">Shop Now</a></div>
 {{ footer }}
